# rust_ml_ai

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  run.json
crates/app/: Cargo.toml
crates/app/src/: atak.rs  cli.rs  gpu.rs  gpu_demo.rs  hud_html.rs  main.rs  mnist.rs  vision.rs  vision_demo.rs
crates/app/src/html/: hud_html.rs  mod.rs
crates/app/src/vision/: annotation.rs  config.rs  data.rs  encoding.rs  mod.rs  pipeline.rs  processing.rs  runtime.rs  server.rs  telemetry.rs  watchdog.rs
crates/gpu-kernels/: Cargo.toml
crates/gpu-kernels/src/: lib.rs  vision.rs  vision_kernels.cu
crates/ml-core/: Cargo.toml
crates/ml-core/src/: detector.rs  digits.rs  lib.rs
crates/video-ingest/: Cargo.toml
crates/video-ingest/src/: camera.rs  ffmpeg.rs  lib.rs  types.rs
crates/vision/src/: cli.rs  main.rs  mnist.rs
crates/vision/src/html/: atak.rs
crates/vision/src/pipeline/: annotation.rs  data.rs  encoding.rs  engine.rs  mod.rs  processing.rs  server.rs  telemetry.rs  watchdog.rs
crates/viz/: Cargo.toml
crates/viz/src/: gizmos.rs  lib.rs  main.rs  map.rs  orbit_camera.rs  scene.rs  stream.rs
html/: atak.html  frame_delta_visualizer.html  index.html
models/: mnist-linear.ot
tools/: check_cuda.cu
