[package]
name = "cuda-app"
version = "0.1.0"
edition = "2024"

[features]
default = []
with-tch = ["ml-core/with-tch", "libloading"]

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-stream = "0.3.5"
ctrlc = "3.4.4"
futures-util = "0.3.31"
gpu-kernels = { path = "../gpu-kernels" }
ml-core = { path = "../ml-core", default-features = false }
video-ingest = { path = "../video-ingest" }
image = { version = "0.25.8", default-features = false, features = ["jpeg"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
libloading = { version = "0.8.4", optional = true }
