[package]
name = "vision"
version = "0.1.0"
edition = "2024"

[features]
default = ["with-tch"]
with-tch = ["ml-core/with-tch", "libloading"]

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-stream = "0.3.5"
ctrlc = "3.4.4"
futures-util = "0.3.31"
gpu-kernels = { path = "../gpu-kernels" }
ml-core = { path = "../ml-core", default-features = false }
video-ingest = { path = "../video-ingest" }
image = { version = "0.25.8", default-features = false, features = ["jpeg"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
libloading = { version = "0.8.4", optional = true }
crossbeam-channel = "0.5.15"
clap = { version = "4.5.51", features = ["derive"] }
tracing-error = "0.2.1"
tracing-chrome = "0.7.2"
tracing-futures = "0.2.5"
metrics = "0.24.2"
metrics-util = "0.20.0"
metrics-exporter-prometheus = "0.17.2"
once_cell = "1.21.3"
console-subscriber = { version = "0.5.0", features = ["env-filter"] }
cust = "0.3.2"
actix-server = "2.6.0"
num_cpus = "1.17.0"
