[package]
name = "ml-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
with-tch = ["tch", "image"]

[dependencies]
anyhow = "1"
once_cell = "1"
tch = { version = "0.18", optional = true }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"], optional = true }
