[package]
name = "video-ingest"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5.15"
opencv = "0.96"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.41"
